// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebhookRouterForm > should render 1`] = `ShallowWrapper {}`;

exports[`WebhookRouterForm > updates > should repopulate post body 1`] = `
{
  "body": {
    "value": "",
  },
  "headers": [
    {
      "value": {
        "name": "Accept",
        "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
        "value": "application/json",
      },
    },
    {
      "value": {
        "name": "",
        "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        "value": "",
      },
    },
  ],
  "method": {
    "value": {
      "value": "GET",
    },
  },
  "resultName": {
    "value": "Result",
  },
  "url": {
    "validationFailures": [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm > updates > should repopulate post body 2`] = `
{
  "body": {
    "value": "@(json(object(
  "contact", object(
    "uuid", contact.uuid, 
    "name", contact.name, 
    "urn", contact.urn
  ),
  "flow", object(
    "uuid", run.flow.uuid, 
    "name", run.flow.name
  ),
  "results", foreach_value(results, extract_object, "value", "category")
)))",
  },
  "headers": [
    {
      "value": {
        "name": "Accept",
        "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
        "value": "application/json",
      },
    },
    {
      "validationFailures": undefined,
      "value": {
        "name": "Content-Type",
        "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
        "value": "application/json",
      },
    },
    {
      "validationFailures": undefined,
      "value": {
        "name": "",
        "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        "value": "",
      },
    },
  ],
  "method": {
    "value": "POST",
  },
  "resultName": {
    "value": "Result",
  },
  "url": {
    "validationFailures": [],
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;
